UserController refactor -> added detailed swagger documentation, error handling, custom exceptions and custom request validations
